[project]
name = "stock-trading-system"
version = "0.1.0"
description = "小米集团股票交易预测系统"

[dependencies]
# 数据处理
pandas = ">=2.0.0"
numpy = ">=1.24.0"
scipy = ">=1.10.0"

# 数据源
yfinance = ">=0.2.0"
alpha-vantage = ">=2.3.0"
itick = ">=0.1.0"  # iTick数据
akshare = ">=1.10.0"  # A股数据

# 特征工程
ta-lib = ">=0.4.0"  # 技术指标
scikit-learn = ">=1.3.0"

# 深度学习
torch = ">=2.0.0"
tensorflow = ">=2.12.0"
transformers = ">=4.30.0"

# 模型解释性
shap = ">=0.42.0"

# 数据库
redis = ">=4.5.0"
sqlalchemy = ">=2.0.0"

# 实时监控
websockets = ">=11.0"
aiohttp = ">=3.8.0"

# NLP情感分析
jieba = ">=0.42.0"
snownlp = ">=0.12.0"

# 可视化
matplotlib = ">=3.7.0"
plotly = ">=5.14.0"
dash = ">=2.10.0"

# 通知
requests = ">=2.28.0"

# 工具
python-dotenv = ">=1.0.0"
schedule = ">=1.2.0"
loguru = ">=0.7.0"
